--- a/android-date-picker/src/main/res/layout/view_date_time_picker.xml
+++ b/android-date-picker/src/main/res/layout/view_date_time_picker.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
-    android:paddingBottom="15dp"
-    android:background="#fff">
+    android:paddingBottom="15dp">
 
     <LinearLayout
         android:orientation="horizontal"
